fix up spacing and wysiwyg elements

--- a/assets/styles/src/templates/_featured-story.scss
+++ b/assets/styles/src/templates/_featured-story.scss
@@ -231,12 +231,14 @@
             margin: auto;
             max-width: 640px;
             width: 50%;
+            padding: 0 0 1rem 0;
             @include max-width ( 800 ) {
                 width: 100%;
                 margin-bottom: 1rem;
                 &:before {
                     content: 'touch image to load gallery';
-                    position: absolute;
+                    position: relative;
+                    float: right;
                     display: block;
                     bottom: .5rem;
                     right: 2.5rem;
@@ -263,7 +265,7 @@
                 }
                 &:nth-of-type(1) img {
                     width: 640px;
-                    padding: 0 2rem 2rem 2rem;
+                    padding: 0 2rem;
                     margin: auto;
                 }
                 &:nth-of-type(2) img, &:nth-of-type(3) img {
@@ -304,6 +306,17 @@
                     }
                 }
                 
+            }
+            
+            .gallery-caption {
+                padding: 0 2rem;
+                bottom: .5rem;
+                right: 2.5rem;
+                color: #666;
+                font-size: .8rem;
+                strong {
+                    text-transform: uppercase;
+                }
             }
         }
         
@@ -362,7 +375,7 @@
             position: absolute;
             display: block;
             float: left;
-            top: calc(50% - 12px);
+            top: calc(50% - 15px);
             margin-left: -40px;
              font-size: 1.5rem;
              padding: .25rem;
@@ -384,7 +397,7 @@
             position: absolute;
             display: block;
             float: left;
-            top: calc(50% - 12px);
+            top: calc(50% - 15px);
             width: 0;
             height: 0;
             margin-left: -12px;
